# docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  model.BalanceResp:
+    properties:
+      address:
+        description: address
+        type: string
+      satoshi:
+        description: 余额satoshi
+        type: integer
+    type: object
   model.BlockInfoResp:
     properties:
       bits:
@@ -37,6 +46,34 @@ definitions:
         description: 区块时间戳
         type: integer
     type: object
+  model.BlockTokenVolumeResp:
+    properties:
+      blkid:
+        type: string
+      codeType:
+        description: '合约类型 0: nft, 1: ft'
+        type: integer
+      codehash:
+        type: string
+      genesis:
+        type: string
+      height:
+        description: 区块高度
+        type: integer
+      inDataValue:
+        description: 输入数量
+        type: integer
+      invalue:
+        type: integer
+      nftIdx:
+        description: nft tokenIdx
+        type: integer
+      outDataValue:
+        description: 输出数量
+        type: integer
+      outvalue:
+        type: integer
+    type: object
   model.BlockchainInfoResp:
     properties:
       bestBlockHash:
@@ -63,6 +100,9 @@ definitions:
       codehash:
         description: FT合约hash160(CodePart)
         type: string
+      count:
+        description: 出现此ft合约的区块次数
+        type: integer
       decimal:
         description: decimal
         type: integer
@@ -75,9 +115,19 @@ definitions:
       icon:
         description: FT icon url
         type: string
+      inSatoshi:
+        type: integer
+      inVolume:
+        description: 输入数量
+        type: integer
       name:
         description: FT name
         type: string
+      outSatoshi:
+        type: integer
+      outVolume:
+        description: 输出数量
+        type: integer
       symbol:
         description: FT symbol
         type: string
@@ -109,23 +159,14 @@ definitions:
         description: FT symbol
         type: string
     type: object
-  model.FTTransferVolumeResp:
-    properties:
-      height:
-        description: 区块高度
-        type: integer
-      inVolume:
-        description: 输入数量
-        type: integer
-      outVolume:
-        description: 输出数量
-        type: integer
-    type: object
   model.NFTInfoResp:
     properties:
       codehash:
         description: NFT合约hash160(CodePart)
         type: string
+      count:
+        description: 当前NFT个数
+        type: integer
       desc:
         description: NFT 描述
         type: string
@@ -135,9 +176,19 @@ definitions:
       icon:
         description: NFT icon url
         type: string
+      inSatoshi:
+        type: integer
+      inTimes:
+        description: 总输入次数
+        type: integer
       name:
         description: NFT name
         type: string
+      outSatoshi:
+        type: integer
+      outTimes:
+        description: 总输出次数
+        type: integer
       symbol:
         description: NFT symbol
         type: string
@@ -167,18 +218,6 @@ definitions:
         type: string
       tokenId:
         description: 持有的NFT id
-        type: integer
-    type: object
-  model.NFTTransferTimesResp:
-    properties:
-      height:
-        description: 区块高度
-        type: integer
-      inTimes:
-        description: 输入次数
-        type: integer
-      outTimes:
-        description: 输出次数
         type: integer
     type: object
   model.Response:
@@ -451,6 +490,30 @@ paths:
                   $ref: '#/definitions/model.Welcome'
               type: object
       summary: Welcome message
+  /address/{address}/balance:
+    get:
+      parameters:
+      - default: 17SkEw2md5avVNyYgj6RiXuQKNwkXaxFyQ
+        description: Address
+        in: path
+        name: address
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code": 0, "data": {}, "msg": "ok"}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.BalanceResp'
+              type: object
+      summary: 通过地址address获取balance
+      tags:
+      - UTXO
   /address/{address}/history:
     get:
       parameters:
@@ -480,6 +543,18 @@ paths:
   /address/{address}/utxo:
     get:
       parameters:
+      - default: 0
+        description: 起始游标
+        in: query
+        name: cursor
+        required: true
+        type: integer
+      - default: 16
+        description: 返回记录数量
+        in: query
+        name: size
+        required: true
+        type: integer
       - default: 17SkEw2md5avVNyYgj6RiXuQKNwkXaxFyQ
         description: Address
         in: path
@@ -530,6 +605,18 @@ paths:
   /block/txs/{blkid}:
     get:
       parameters:
+      - default: 0
+        description: 起始游标
+        in: query
+        name: cursor
+        required: true
+        type: integer
+      - default: 16
+        description: 返回记录数量
+        in: query
+        name: size
+        required: true
+        type: integer
       - default: 0000000082b5015589a3fdf2d4baff403e6f0be035a5d9742c1cae6295464449
         description: Block ID
         in: path
@@ -568,18 +655,18 @@ paths:
                   $ref: '#/definitions/model.BlockchainInfoResp'
               type: object
       summary: 获取最新区块位置、同步状态等信息
-  /blocks/{start}/{end}:
+  /blocks:
     get:
       parameters:
       - default: 0
         description: Start Block Height
-        in: path
+        in: query
         name: start
         required: true
         type: integer
       - default: 3
         description: Start Block Height
-        in: path
+        in: query
         name: end
         required: true
         type: integer
@@ -600,6 +687,56 @@ paths:
       summary: 获取指定高度范围内的区块概述列表
       tags:
       - Block
+  /contract/history/{codehash}/{genesis}/{address}:
+    get:
+      parameters:
+      - default: 0
+        description: 起始游标
+        in: query
+        name: cursor
+        required: true
+        type: integer
+      - default: 10
+        description: 返回记录数量
+        in: query
+        name: size
+        required: true
+        type: integer
+      - default: 844c56bb99afc374967a27ce3b46244e2e1fba60
+        description: Code Hash160
+        in: path
+        name: codehash
+        required: true
+        type: string
+      - default: 74967a27ce3b46244e2e1fba60844c56bb99afc3
+        description: 'Genesis ID '
+        in: path
+        name: genesis
+        required: true
+        type: string
+      - default: 17SkEw2md5avVNyYgj6RiXuQKNwkXaxFyQ
+        description: Address
+        in: path
+        name: address
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code": 0, "data": [{}], "msg": "ok"}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/model.TxOutHistoryResp'
+                  type: array
+              type: object
+      summary: 通过溯源genesis获取相关tx历史列表，返回详细输入/输出
+      tags:
+      - History
   /ft/balance/{codehash}/{genesis}/{address}:
     get:
       parameters:
@@ -634,44 +771,6 @@ paths:
                   $ref: '#/definitions/model.FTOwnerBalanceResp'
               type: object
       summary: 查询某人持有的某FT Token的余额
-      tags:
-      - token FT
-  /ft/balance/all/{address}:
-    get:
-      parameters:
-      - default: 0
-        description: 起始游标
-        in: query
-        name: cursor
-        required: true
-        type: integer
-      - default: 10
-        description: 返回记录数量
-        in: query
-        name: size
-        required: true
-        type: integer
-      - default: 17SkEw2md5avVNyYgj6RiXuQKNwkXaxFyQ
-        description: Address
-        in: path
-        name: address
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code": 0, "data": [{}], "msg": "ok"}'
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.Response'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/model.FTOwnerByAddressResp'
-                  type: array
-              type: object
-      summary: 查询某人持有的FT Token列表。获得每个token的余额
       tags:
       - token FT
   /ft/history/{codehash}/{genesis}/{address}:
@@ -788,18 +887,56 @@ paths:
       summary: 查询FT Token的持有人。获得每个地址的token余额
       tags:
       - token FT
-  /ft/transfer-volume:
+  /ft/summary/{address}:
+    get:
+      parameters:
+      - default: 0
+        description: 起始游标
+        in: query
+        name: cursor
+        required: true
+        type: integer
+      - default: 10
+        description: 返回记录数量
+        in: query
+        name: size
+        required: true
+        type: integer
+      - default: 17SkEw2md5avVNyYgj6RiXuQKNwkXaxFyQ
+        description: Address
+        in: path
+        name: address
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code": 0, "data": [{}], "msg": "ok"}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/model.FTOwnerByAddressResp'
+                  type: array
+              type: object
+      summary: 查询某人持有的FT Token列表。获得每个token的余额
+      tags:
+      - token FT
+  /ft/transfer-volume/{codehash}/{genesis}:
     get:
       parameters:
       - default: 0
         description: Start Block Height
-        in: path
+        in: query
         name: start
         required: true
         type: integer
       - default: 3
         description: Start Block Height
-        in: path
+        in: query
         name: end
         required: true
         type: integer
@@ -826,7 +963,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/model.FTTransferVolumeResp'
+                    $ref: '#/definitions/model.BlockTokenVolumeResp'
                   type: array
               type: object
       summary: 查询FT Token在区块中的转移数量，以合约CodeHash+GenesisID来确认一种FT
@@ -883,58 +1020,6 @@ paths:
       tags:
       - UTXO
       - token FT
-  /genesis/{genesis}/history:
-    get:
-      parameters:
-      - default: 74967a27ce3b46244e2e1fba60844c56bb99afc3
-        description: Genesis
-        in: path
-        name: genesis
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code": 0, "data": [{}], "msg": "ok"}'
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.Response'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/model.TxOutHistoryResp'
-                  type: array
-              type: object
-      summary: 通过溯源genesis获取相关tx历史列表，返回详细输入/输出
-      tags:
-      - History
-  /genesis/{genesis}/utxo:
-    get:
-      parameters:
-      - default: 74967a27ce3b46244e2e1fba60844c56bb99afc3
-        description: Genesis
-        in: path
-        name: genesis
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code": 0, "data": [{}], "msg": "ok"}'
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.Response'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/model.TxOutResp'
-                  type: array
-              type: object
-      summary: 通过溯源genesis获取相关utxo列表
-      tags:
-      - UTXO
   /height/{height}/block:
     get:
       parameters:
@@ -962,6 +1047,18 @@ paths:
   /height/{height}/block/txs:
     get:
       parameters:
+      - default: 0
+        description: 起始游标
+        in: query
+        name: cursor
+        required: true
+        type: integer
+      - default: 16
+        description: 返回记录数量
+        in: query
+        name: size
+        required: true
+        type: integer
       - default: 3
         description: Block Height
         in: path
@@ -1054,6 +1151,18 @@ paths:
   /height/{height}/tx/{txid}/ins:
     get:
       parameters:
+      - default: 0
+        description: 起始游标
+        in: query
+        name: cursor
+        required: true
+        type: integer
+      - default: 16
+        description: 返回记录数量
+        in: query
+        name: size
+        required: true
+        type: integer
       - default: 170
         description: Block Height
         in: path
@@ -1122,6 +1231,18 @@ paths:
   /height/{height}/tx/{txid}/outs:
     get:
       parameters:
+      - default: 0
+        description: 起始游标
+        in: query
+        name: cursor
+        required: true
+        type: integer
+      - default: 16
+        description: 返回记录数量
+        in: query
+        name: size
+        required: true
+        type: integer
       - default: 170
         description: Block Height
         in: path
@@ -1351,18 +1472,18 @@ paths:
       summary: 查询某人持有的所有NFT Token列表。获得持有的nft数量计数
       tags:
       - token NFT
-  /nft/transfer-times:
+  /nft/transfer-volume/{codehash}/{genesis}/{tokenid}:
     get:
       parameters:
       - default: 0
         description: Start Block Height
-        in: path
+        in: query
         name: start
         required: true
         type: integer
       - default: 3
         description: Start Block Height
-        in: path
+        in: query
         name: end
         required: true
         type: integer
@@ -1395,7 +1516,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/model.NFTTransferTimesResp'
+                    $ref: '#/definitions/model.BlockTokenVolumeResp'
                   type: array
               type: object
       summary: 查询NFT Token在区块中的转移次数，以合约CodeHash+GenesisID，和tokenId来确认一种NFT。
@@ -1530,6 +1651,18 @@ paths:
   /tx/{txid}/ins:
     get:
       parameters:
+      - default: 0
+        description: 起始游标
+        in: query
+        name: cursor
+        required: true
+        type: integer
+      - default: 16
+        description: 返回记录数量
+        in: query
+        name: size
+        required: true
+        type: integer
       - default: f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16
         description: TxId
         in: path
@@ -1616,6 +1749,18 @@ paths:
   /tx/{txid}/outs:
     get:
       parameters:
+      - default: 0
+        description: 起始游标
+        in: query
+        name: cursor
+        required: true
+        type: integer
+      - default: 16
+        description: 返回记录数量
+        in: query
+        name: size
+        required: true
+        type: integer
       - default: f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16
         description: TxId
         in: path
