# model/ft.go
@@ -1,14 +1,19 @@
 package model
 
 type FTInfoResp struct {
-	CodeHashHex string `json:"codehash"` // FT合约hash160(CodePart)
-	GenesisHex  string `json:"genesis"`  // FT合约的genesis，Hex编码
-	Name        string `json:"name"`     // FT name
-	Symbol      string `json:"symbol"`   // FT symbol
-	Decimal     int    `json:"decimal"`  // decimal
-	Desc        string `json:"desc"`     // FT 描述
-	Icon        string `json:"icon"`     // FT icon url
-	Website     string `json:"website"`  // FT website url
+	CodeHashHex string `json:"codehash"`  // FT合约hash160(CodePart)
+	GenesisHex  string `json:"genesis"`   // FT合约的genesis，Hex编码
+	Name        string `json:"name"`      // FT name
+	Symbol      string `json:"symbol"`    // FT symbol
+	Decimal     int    `json:"decimal"`   // decimal
+	Desc        string `json:"desc"`      // FT 描述
+	Icon        string `json:"icon"`      // FT icon url
+	Website     string `json:"website"`   // FT website url
+	Count       int    `json:"count"`     // 出现此ft合约的区块次数
+	InVolume    int    `json:"inVolume"`  // 输入数量
+	OutVolume   int    `json:"outVolume"` // 输出数量
+	InSatoshi   int    `json:"inSatoshi"`
+	OutSatoshi  int    `json:"outSatoshi"`
 }
 
 type FTTransferVolumeResp struct {
